css/default.css
/* ... */
a:link { color: #404040; }
a:visited { color: #000000;}
a.current { text-decoration: none; font-weight: bold; }
/* a:hover {background-color:#999966;color:white} /* */
.wikiTitle {
  padding-left:10px;
  padding-top:0.4em;
  padding-bottom:0;
  font-family:Trebuchet MS,Tahoma,Lucida,sans-serif;
  font-size:1.3em;
  font-weight:bold;
  text-decoration: none;
}

.wikiTitle a,.wikiTitle a:active,.wikiTitle a:visited {
  color: #333333;
  text-shadow: #c3c3c3 1px 1px 1px;
}

.wikiTitle a:hover {
  color: #0686db;
  text-decoration: underline;
}

#wikiTitle {
  padding-top:5px;
  padding-left:0px;
  padding-right:5px;
  margin-right: -1px;
  margin-left:1px;
  _margin-right: 0;
}

.last-modified {
  padding-left: 20px;
  margin-bottom: 3px;
  font-size: 12px;
}

code, code.wiki, tt.wiki {font-family:Monotype,Lucida Console,lucida,monospace;font-size:1em;}
code, code.wiki, tt.wiki {
  box-shadow: inset 0 0 .3em #f0f0f0;
  background-color: #fbfaf9;
  padding: 0.2em 0.5em;
  border-radius: 3px;
  /* border: solid 1px #ddd; /* */
}

tt.foot {
  font-family:Tahoma,lucida,monospace;
  font-size:11px;
  vertical-align: super;
  line-height: 1em; /* Reduce line-height for <sup> and <sub> */
}

/* from mediawiki */
sup, sub {
  line-height: 1em; /* Reduce line-height for <sup> and <sub> */
}

tt.sister {
  font-family:Tahoma,lucida,monospace;
  font-size:11px;
  vertical-align: super;
  text-decoration: none;
}

pre {
  white-space:pre-wrap;
  white-space: -moz-pre-wrap;
  overflow: auto;
}

pre.wiki {
  /*
  padding-left:6px;
  padding-top:6px;
  font-family:"Bitstream Vera Sans Mono", Courier, GulimChe, monospace !important;
  background-color:#000000;
  color:#c0c0c0;
  border:1px solid #ececec;
  border-left:10px solid #ececec;
  */
  font-family:"Bitstream Vera Sans Mono", Courier, GulimChe, monospace !important;
  background-color:#f5f5f5;
  color:#0a0a0a;
  border:1px solid rgba(0,0,0,.15);
  border-radius: 3px;
  -webkit-box-shadow: rgba(200,200,200,0.7) 0 3px 10px -1px;
  box-shadow: rgba(200,200,200,0.7) 0 3px 5px -1px;

  padding:10px;
  white-space:pre;
  white-space: -moz-pre-wrap;
  overflow-x: auto;

  word-break: break-all;
  word-wrap: break-word;
  white-space: pre-wrap;
  
}

pre.console {
  background-color: #000000;
  color: #E0E0E0;
  padding: .25em ;
  border: 2px inset #808080;
}

pre.quote {
  padding-left:6px;
  padding-top:6px;
  white-space:pre-wrap;
  white-space: -moz-pre-wrap; 
  padding:10px;
  white-space:pre;
  white-space: -moz-pre-wrap;
  overflow-x: auto;
}

pre.console {
  background-color: #000000;
  color: #E0E0E0;
  padding: .25em ;
  border: 2px inset #808080;
}

pre.quote {
  padding-left:6px;
  padding-top:6px;
  white-space:pre-wrap;
  white-space: -moz-pre-wrap; 
  font-family:Georgia,monotype,lucida,monospace;font-size:14px;
  background-color: #E9ECEF;
}

.wikiSyntax {
  /*
  border:1px solid #ECECEC;
  border-left:10px solid #ECECEC;
  padding: 10px 0;
  background-color:#eeeeee;
  */
  color:#0a0a0a;
  border:1px solid #a0a0a0;
  border-radius: 3px;
  border-left:10px soddlid #ececec;
  -webkit-box-shadow: rgba(200,200,200,0.7) 0 4px 10px -1px;
  box-shadow: rgba(200,200,200,0.7) 0 4px 10px -1px;
}

.line.alt {
  background-color:#272727;
}

.line {
  padding-left:10px;
}

table.wiki {
  overflow-x: auto;
  border-collapse: collapse;
/* background-color:#E2ECE5;
  background-color: #F8F7F0;
  border: 0px outset #ddddb0; */
}

table.wiki tr {
/* background-color: #F8F8F8; */
/* border-collapse: collapse; */
/* border: 0px inset #EAF2F4; */
}

table.wiki td, table.wiki th {
  border: 1px solid #969696;
  padding:5px;
}

textarea.wiki { width:98%; }
textarea.wiki {
  border: 1px solid #d0d0d0;
  padding: 8px;
}

td.info, th.info {
  background:#E2E2E2 url("../imgs/infotrbg.png") repeat-x;
}

#wikiContent h1, #wikiContent h2 {
  /* color: #0066cc; /* */
  /* font-family:sans-serif; */
  padding-left:2px;
  border-bottom:1px solid #dddddd; /* */
  padding-bottom:0.2em;
  margin-left:-5px;
  padding-left: 5px;
  /* border-left:3px solid #dddddd; /* */
}

#wikiContent h3, h4, h5 {
  font-family:Arial,sans-serif;
}

#wikiContent h1 { font-size:22px; }
#wikiContent h2 { font-size:1.4em; }
#wikiContent h3 { font-size:1.3em; }
#wikiContent h4 { font-size:1.2em; }
#wikiContent h5 { font-size:1.0em; }

div.section h1 i,
div.section h2 i,
div.section h3 i,
div.section h4 i,
div.section h5 i {
  margin-top: 5px;
}

h1 a, h2 a, h3 a, h4 a, h5 a {
  text-decoration:none;
}

ul {
  list-style-image: /* url(../imgs/li1.png); /* */
     url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAcAAAAHCAYAAADEUlfTAAAAYElEQVQIW2OcN2/e/wsXLjCAACsrK4O2tjZDUlISI4jPmJeX9x8sAwUgBcXFxQxSUlKM+CWBqv7//v0bbiyIAdcJsvPq1atwY0F2enh4QIwFiT579gzFXpAYXBLZQchsANVcIQjW8cb3AAAAAElFTkSuQmCC");
}

ul>li ul>li {
  list-style-image: /* url(../imgs/li2.png); /* */
     url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAYAAAAGCAYAAADgzO9IAAAARElEQVQIW2MsLi7+//v3bwYQYGVlZejt7WUEsRnz8vL+g0WhIDc3l0FVVZURtwS6URkZGRAdIBNu376NYhxcAtkOGBsAlxoaB4plusQAAAAASUVORK5CYII=");
}

ol {
  list-style-image: none;
}

h2,h1 {
  padding-top:0.1em;
}

* html a.perma:visited { /* IE hack */
  color:#000;
}

div.message {
  margin-top: 3pt;
  padding:0px 5px;
  /* background: #FFF1B9 url(../imgs/warn.png) 10px 10px no-repeat; */
  min-height: 60px;
  height: auto !important;
  height:60px;
  border: 2px solid #e0e0e0; /* */
  border-radius: 3px;
  background: #f4f4f4;
}

div.message h3 {
  margin:0px;
  border:0px;
  font-family:Trebuchet MS,sans-serif;
  font-size:20px;
  line-height:300%;
}

pre.errlog {
  padding-left:55px;
  background: #FFE784 url(../imgs/error.png) 10px 10px no-repeat;
  min-height: 40px;
  height: auto !important;
  border-width:2px 0 2px 0;
  height:40px;
}

.highlight {
  background-color:#FFFF40;
}

#wikiGoto {
  font-family:Tahoma,Lucida,sans-serif;
  font-size:11px;
}

input, option, select {
  font-size:12px;
  padding:1px;
  margin:1px;
}
/* ... */

